force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Automated_Email_Delivery__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Automated_Email_Delivery__c</fullName>
    <inlineHelpText>Balance Due - Billing with a balance will have an email sent once the Billing Date is reached.Zero Balance - Billing will have an email sent once its balance reaches zero after the Billing Date.No Delivery - Automated emails not to be sent.</inlineHelpText>
    <label>Automated Email Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Balance Due</fullName>
            </value>
            <value>
                <fullName>Zero Balance</fullName>
            </value>
            <value>
                <fullName>No Delivery</fullName>
                <default>true</default>
                <label>No Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>