force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Billing_Days_Offset__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Days_Offset__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>This field has been deprecated. Use the Billing Days Due field on the customer (account0 record instead.</inlineHelpText>
    <label>zDep-Billing Days Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>