force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Billing_Logo__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Logo__c</fullName>
    <inlineHelpText>URL to display your logo on the Billing. Upload your logo as an externally available image in documents. Right click on the image and copy URL of logo. Paste the URL in this field.</inlineHelpText>
    <label>zDep-Billing Logo</label>
    <type>Url</type>
</CustomField>