force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Billing_Terms_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
    <defaultValue>&quot;Net 30&quot;</defaultValue>
    <inlineHelpText>This field has been deprecated. Use the Billing Terms Name field on the account instead.</inlineHelpText>
    <label>zDep-Billing Terms Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>