force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Billing_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Type_Override__c</fullName>
    <inlineHelpText>Allows you to override the standard Invoice or Credit Memo type billing. Can be used for orders, packing slips, quotes. etc.</inlineHelpText>
    <label>zDep-Billing Type Override</label>
    <length>40</length>
    <type>Text</type>
</CustomField>