force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_Name__c</fullName>
    <defaultValue>$Organization.Name</defaultValue>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>