force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_PostalCode__c</fullName>
    <defaultValue>$Organization.PostalCode</defaultValue>
    <label>Company PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>