force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_Street__c</fullName>
    <defaultValue>$Organization.Street</defaultValue>
    <label>zDep-Company Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>