force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Currency_Format__c</fullName>
    <inlineHelpText>Allows for overriding the default currency format provided in VF page.</inlineHelpText>
    <label>Currency Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>