force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Custom_Header_Content__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Custom_Header_Content__c</fullName>
    <inlineHelpText>Used to display custom header content on the Billing PDF.</inlineHelpText>
    <label>zDep-Custom Header Content</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>