force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Description_for_Ext_Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description_for_Ext_Total__c</fullName>
    <defaultValue>&quot;Ext Total&quot;</defaultValue>
    <label>zDep-Description for Ext Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>