force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Description_for_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description_for_Rate__c</fullName>
    <defaultValue>&quot;Rate&quot;</defaultValue>
    <label>zDep-Description for Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>