force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Description_for_Units__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Description_for_Units__c</fullName>
    <defaultValue>&quot;Units&quot;</defaultValue>
    <label>zDep-Description for Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>