force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_Account_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_Account_Shipping_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>zDep-Display Account Shipping Address</label>
    <type>Checkbox</type>
</CustomField>