force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_Custom_Header__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_Custom_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <label>zDep-Display Custom Header</label>
    <type>Checkbox</type>
</CustomField>