force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_GL_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>zDep-Display GL Account</label>
    <type>Checkbox</type>
</CustomField>