force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_Invoice_Comment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_Invoice_Comment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>zDep-Display Invoice Comment</label>
    <type>Checkbox</type>
</CustomField>