force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_List_Price_Discounts__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_List_Price_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to display list prices and discounts in the invoice format.</inlineHelpText>
    <label>zDep-Display List Price &amp; Discounts</label>
    <type>Checkbox</type>
</CustomField>