force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_Product_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDep-Display Product Description</label>
    <type>Checkbox</type>
</CustomField>