force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Display_Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Display_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Displays Project in the body of the billing.</inlineHelpText>
    <label>zDep-Display Project</label>
    <type>Checkbox</type>
</CustomField>