force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Group_by_Level_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Group_by_Level_1__c</fullName>
    <inlineHelpText>Items in the body of the Invoice PDF will be sorted by this data element 1st.</inlineHelpText>
    <label>zDep-Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>GL Account</fullName>
            </value>
            <value>
                <fullName>Project Task</fullName>
            </value>
            <value>
                <fullName>Variable 1</fullName>
            </value>
            <value>
                <fullName>Variable 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>