force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Group_by_Level_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Group_by_Level_2__c</fullName>
    <description>Deprecated in Version 1.17</description>
    <inlineHelpText>Deprecated in Version 1.17</inlineHelpText>
    <label>zDep-Group by Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>GL Account</fullName>
            </value>
            <value>
                <fullName>Project Task</fullName>
            </value>
            <value>
                <fullName>Variable 1</fullName>
            </value>
            <value>
                <fullName>Variable 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>