force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Image__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Image__c</fullName>
    <inlineHelpText>This is the image which will display in the right top corner of the PDF.</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>