force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Logo_Display__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Logo_Display__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If your logo URL was copied into the logo field properly, the image should display here.</inlineHelpText>
    <label>zDep-Logo Display</label>
    <type>Text</type>
</CustomField>