force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Numeric_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Numeric_Format__c</fullName>
    <inlineHelpText>Overrides the default numeric format (6 decimal places) for the Quantity field on PDF formats. For instance, you would enter &#39;0.00&#39; to restrict this to 2 decimal places.</inlineHelpText>
    <label>Numeric Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>