force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Org_Wide_Email_Address__c</fullName>
    <label>Org-Wide Email Address</label>
    <type>Email</type>
</CustomField>