force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Remittance_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Remittance_Email__c</fullName>
    <inlineHelpText>Email to display on billing format for customers to use when contacting your organization with questions on their bill.</inlineHelpText>
    <label>zDep-Remittance Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>