force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Title_for_Comments__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Title_for_Comments__c</fullName>
    <defaultValue>&quot;Comments&quot;</defaultValue>
    <inlineHelpText>The text here will over write the Comments title in the Billing PDF. This is used to better describe your offering to your customer.</inlineHelpText>
    <label>zDep-Title for Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>