force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Title_for_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Title_for_Variable_2__c</fullName>
    <inlineHelpText>The text here will over write the Time Card Variable 2 title in the Billing PDF. This is used to better describe your offering to your customer.</inlineHelpText>
    <label>zDep-Title for Variable 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>