force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Use_Proprietary_Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Use_Proprietary_Billing_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the proprietary billing number will appear on the invoice PDF rather than the standard salesforce auto-number.</inlineHelpText>
    <label>zDep-Use Proprietary Billing Number</label>
    <type>Checkbox</type>
</CustomField>