force-app/main/default/objects/AcctSeed__Billing_Format__c/fields/Dump_Id__c.field-meta.xml
<CustomField>
    <fullName>Dump_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Dump Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>