force-app/main/default/objects/AcctSeed__Billing_Format__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Visualforce_PDF_Page__c</columns>
    <columns>AcctSeed__Default_Email_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>